ci: linter issues
